# beaglebone

Beaglebone-master/deamon/: CMakeLists.txt
Beaglebone-master/deamon/include/: cc1200_logger.h  cc1200d.h
Beaglebone-master/deamon/src/: cc1200_logger.c  cc1200d.c
Beaglebone-master/dts/: BB-BONE-CC1200-00A0.dts
Beaglebone-master/lib/: CMakeLists.txt
Beaglebone-master/lib/include/: cc1200.h
Beaglebone-master/lib/src/: radio_control.c
Beaglebone-master/spi/: CMakeLists.txt  SPI.hp  SPIv1.c  SPIv1.p
Beaglebone-master/student_package/: CMakeLists.txt
Beaglebone-master/student_package/src/: SPIv1_test.c
